--- a/NOVA/Views/Shared/_Layout_MES.cshtml
+++ b/NOVA/Views/Shared/_Layout_MES.cshtml
@@ -261,7 +261,7 @@
         }
 
         function OranFormat(Pay, Payda) {
-            return RoundUp(Pay / Payda) == '0.00' || isNaN(parseFloat(Pay / Payda)) ? '-%' : `${RoundUp(Pay / Payda)} %`;
+            return RoundUp(Pay / Payda) == '0.00' || isNaN(parseFloat(Pay / Payda)) ? '-%' : `${RoundUp(Pay / Payda) * 100}%`;
         }
 
         function RoundUp(v, n = 2) {
